--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/iCoder/practice-project/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/iCoder/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/iCoder/practice-project/about.html">About</a>
+                        <a class="nav-link" href="/iCoder/about.html">About</a>
                     </li>
 
 
@@ -47,7 +47,7 @@
                             <li><a class="dropdown-item" href="#">Write for us</a></li>
                         </ul>
                     <li class="nav-item">
-                        <a class="nav-link" href="/iCoder/practice-project/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/iCoder/contact.html">Contact Us</a>
                     </li>
 
                 </ul>
